@@ -4,3 +4,11 @@ data.rso_ignore_resource_entities = data.rso_ignore_resource_entities or {}
 data.rso_ignore_resource_entities["heavy-oil-geyser"] = true
 data.rso_ignore_planets = data.rso_ignore_planets or {}
 data.rso_ignore_planets['Arig'] = true
+
+data.rso_ignore_resource_entities["ruby-geode"] = true
+data.rso_ignore_resource_entities["sapphire-geode"] = true
+data.rso_ignore_resource_entities["emerald-geode"] = true
+data.rso_ignore_resource_entities["planetaris-quartz-ore"] = true
+data.rso_ignore_resource_entities["planetaris-metallic-ore"] = true
+data.rso_ignore_resource_entities["planetaris-carbon-ore"] = true
+data.rso_ignore_planets['hyarion'] = true
