@@ -24,7 +24,7 @@ data:extend({
     name = "planetaris-sifter",
     icon = "__planetaris-unbounded__/graphics/icons/sifter.png",
     subgroup = "arig-production",
-    order = "a-a",
+    order = "a-a-a",
     inventory_move_sound = item_sounds.fluid_inventory_move,
     pick_sound = item_sounds.fluid_inventory_pickup,
     drop_sound = item_sounds.fluid_inventory_move,
@@ -106,6 +106,13 @@ data:extend({
         stack_size = 100,
         weight = 1*kg,
         default_import_location = "arig",
+        pictures =
+        {
+          { size = 64, filename = "__planetaris-unbounded__/graphics/icons/cactus.png",   scale = 0.5, mipmap_count = 4 },
+          { size = 64, filename = "__planetaris-unbounded__/graphics/icons/cactus-2.png", scale = 0.5, mipmap_count = 4 },
+          { size = 64, filename = "__planetaris-unbounded__/graphics/icons/cactus-3.png", scale = 0.5, mipmap_count = 4 },
+          { size = 64, filename = "__planetaris-unbounded__/graphics/icons/cactus-4.png", scale = 0.5, mipmap_count = 4 },
+        },
 
         fuel_category = "chemical",
         fuel_value = "2MJ",
@@ -124,7 +131,7 @@ data:extend({
         name = "planetaris-glass-panel",
         icon = "__planetaris-unbounded__/graphics/icons/glass-panel.png",
         subgroup = "arig-processes",
-        order = "a[basic]-b",
+        order = "a[basic]-b-a",
         stack_size = 100,
         weight = 5*kg,
         default_import_location = "arig",
@@ -153,7 +160,7 @@ data:extend({
         name = "planetaris-raw-quartz",
         icon = "__planetaris-unbounded__/graphics/icons/quartz.png",
         subgroup = "arig-processes",
-        order = "a[basic]-c",
+        order = "a[basic]-b-b",
         stack_size = 100,
         weight = 5*kg,
         default_import_location = "arig",
