@@ -53,7 +53,7 @@ data:extend(
         },
         category = "sifting",
         subgroup = "arig-processes",
-        order = "a[sand-processing]-a[sand-processing]",
+        order = "a[sand-processing]-a[sifting]",
         enabled = false,
         auto_recycle = false,
         energy_required = 0.5,
@@ -80,7 +80,7 @@ data:extend(
         },
         category = "sifting",
         subgroup = "arig-processes",
-        order = "a[sand-processing]-b[sand-processing]",
+        order = "a[sand-processing]-a[sifting]-b",
         enabled = false,
         auto_recycle = false,
         energy_required = 0.5,
@@ -105,7 +105,7 @@ data:extend(
         },
         category = "sifting",
         subgroup = "arig-processes",
-        order = "a[sand-processing]-c[sand-processing]",
+        order = "a[sand-processing]-a[sifting]-c",
         enabled = false,
         auto_recycle = false,
         energy_required = 2,
@@ -136,7 +136,7 @@ data:extend(
       },
       category = "organic-or-assembling",
       subgroup = "arig-processes",
-      order = "a-a-b",
+      order = "a-a-a[natural]",
       enabled = false,
       auto_recycle = false,
       energy_required = 1,
@@ -281,7 +281,7 @@ data:extend(
     name = "planetaris-advanced-heavy-oil-cracking",
     category = "chemistry",
     subgroup = "arig-processes",
-    order = "a[sand-processing]-c",
+    order = "a[sand-processing]-c-a",
     enabled = false,
     energy_required = 2,
     icon = "__planetaris-unbounded__/graphics/icons/advanced-heavy-oil-cracking.png",
@@ -575,6 +575,7 @@ data:extend(
     localised_description = {"recipe-description.solid-fuel-from-heavy-oil"},
     category = "compressing",
     subgroup = "arig-processes",
+    order = "a[sand-processing]-c-b",
     icon = "__base__/graphics/icons/solid-fuel-from-heavy-oil.png",
     auto_recycle = false,
     enabled = false,
@@ -593,6 +594,7 @@ data:extend(
     localised_description = {"recipe-description.solid-fuel-from-light-oil"},
     category = "compressing",
     subgroup = "arig-processes",
+    order = "a[sand-processing]-c-b",
     icon = "__base__/graphics/icons/solid-fuel-from-light-oil.png",
     auto_recycle = false,
     enabled = false,
@@ -611,6 +613,7 @@ data:extend(
     localised_description = {"recipe-description.solid-fuel-from-petroleum-gas"},
     category = "compressing",
     subgroup = "arig-processes",
+    order = "a[sand-processing]-c-b",
     icon = "__base__/graphics/icons/solid-fuel-from-petroleum-gas.png",
     auto_recycle = false,
     enabled = false,
